<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="18dp"
    android:paddingBottom="18dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_name"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/ModalTitle"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/first_divider"
        android:background="@color/grey"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp"
        android:layout_below="@+id/title"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_label"
        android:drawableStart="@drawable/connect_icon"
        android:id="@+id/connectButton"
        android:textAllCaps="false"
        android:background="@null"
        android:stateListAnimator="@null"
        android:drawablePadding="5dp"
        android:gravity="center_vertical|start"
        android:minWidth="65dp"
        android:minHeight="30dp"
        android:layout_below="@+id/first_divider"
        android:layout_alignParentStart="true"
        style="@style/ModalActions"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_label"
        android:drawableStart="@drawable/copy_icon"
        android:id="@+id/copy_button"
        android:textAllCaps="false"
        android:background="@null"
        android:stateListAnimator="@null"
        android:drawablePadding="5dp"
        android:gravity="center_vertical|start"
        android:minWidth="65dp"
        android:minHeight="30dp"
        android:layout_below="@+id/first_divider"
        android:layout_centerHorizontal="true"
        style="@style/ModalActions" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_label"
        android:drawableStart="@drawable/share_icon"
        android:id="@+id/share_button"
        android:textAllCaps="false"
        android:background="@null"
        android:stateListAnimator="@null"
        android:drawablePadding="5dp"
        android:gravity="center_vertical|start"
        android:minWidth="65dp"
        android:minHeight="30dp"
        android:layout_below="@+id/first_divider"
        android:layout_alignParentEnd="true"
        style="@style/ModalActions" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/second_divider"
        android:background="@color/grey"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/copy_button"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_scrollview"
        android:layout_below="@+id/second_divider"
        android:layout_above="@+id/ok_dialog"
        android:fillViewport="true" >

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fast_network"
                android:id="@+id/f5ghz_indicator"
                android:contentDescription="@string/f5ghz_description"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <Space android:id="@+id/dummy"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hardware_label"
                android:id="@+id/address_label"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/dummy"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                style="@style/ModalInfoTags"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_label"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/dummy"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                style="@style/ModalInfoTags"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:layout_below="@+id/address_label"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/dummy"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="10dp"
                style="@style/NormalTextDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/channel"
                android:layout_below="@+id/address_label"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/dummy"
                android:layout_marginTop="1dp"
                android:layout_marginStart="20dp"
                style="@style/NormalTextDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frequency_label"
                android:id="@+id/frequency_label"
                android:layout_below="@+id/address"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/dummy"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                style="@style/ModalInfoTags"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_width_label"
                android:id="@+id/channel_bandwidth_label"
                android:layout_below="@+id/channel"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/dummy"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                style="@style/ModalInfoTags"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mhz"
                android:id="@+id/frequency"
                android:layout_below="@+id/frequency_label"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/dummy"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="10dp"
                style="@style/NormalTextDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mhz"
                android:id="@+id/channel_bandwidth"
                android:layout_below="@+id/channel_bandwidth_label"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/dummy"
                android:layout_marginTop="1dp"
                android:layout_marginStart="20dp"
                style="@style/NormalTextDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intensity_label"
                android:id="@+id/intensity_label"
                android:layout_below="@+id/frequency"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/dummy"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                style="@style/ModalInfoTags"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passpoint"
                android:id="@+id/passpoint_label"
                android:layout_below="@+id/channel_bandwidth"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/dummy"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                style="@style/ModalInfoTags"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dbm"
                android:id="@+id/intensity"
                android:layout_below="@+id/intensity_label"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/dummy"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="10dp"
                style="@style/NormalTextDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/passpoint"
                android:layout_below="@+id/passpoint_label"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/dummy"
                android:layout_marginTop="1dp"
                android:layout_marginStart="20dp"
                style="@style/NormalTextDark"/>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="135dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/intensity" >
                <pl.pawelkleczkowski.customgauge.CustomGauge
                    android:id="@+id/gauge"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:layout_marginTop="25dp"
                    app:gaugeStartValue="0"
                    app:gaugeEndValue="100"
                    app:gaugePointEndColor="@color/green"
                    app:gaugePointStartColor="@color/yellow"
                    app:gaugeStartAngle="180"
                    app:gaugeSweepAngle="180"
                    app:gaugeStrokeCap="BUTT"
                    app:gaugeStrokeColor="@color/semilight_grey"
                    app:gaugeStrokeWidth="20dp"
                    />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        android:id="@+id/ok_dialog"
        android:background="@color/mid_blue"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"/>

</RelativeLayout>