<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start|top"
    android:background="@color/dark_grey"
    tools:context="org.mistercyb.wifiinfo.ScannerFragment"
    tools:ignore="Overdraw">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:background="@color/light_grey"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:paddingBottom="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected_to"
                android:id="@+id/current_connection_label"
                style="@style/MainConnection"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/current_connection"
                style="@style/MainConnectionBold"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mac_host_label"
            android:id="@+id/hw"
            style="@style/NormalTextDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_host_label"
            android:id="@+id/ip"
            style="@style/NormalTextDark" />

    </LinearLayout>


    <TextView android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/no_results"
        style="@style/NormalTextLight"/>
    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ExpandableListView
            android:id="@+id/apsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:groupIndicator="@android:color/transparent"
            android:divider="@color/mid_grey"
            android:dividerHeight="0.5dp"
            android:childDivider="@color/mid_grey" >
        </ExpandableListView>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>

